# med-gemma-deepresearch

./: .gitignore  MedGemma-DeepResearch-Writeup.docx  README.md  pyproject.toml  requirements.txt
notebooks/: med-gemma-deepresearch-kaggle.ipynb
scripts/: benchmark_metrics.py  smoke_real_inference.py
src/: agent.py  config.py  data.py  evaluate.py  gradio_app.py  main.py  preprocessing.py  visualise.py
